--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -92,4 +92,98 @@
   institution={SAE Technical Paper}
 }
 
+@misc{sun2017decoupled,
+  title={Decoupled three-phase power flow analysis method for unbalanced power distribution systems},
+  author={Sun, Hongbo and Dubey, Anamika},
+  year={2017},
+  month=may # "~2",
+  note={US Patent 9,640,994}
+}
+
+@inproceedings{dubey2015locating,
+  title={Locating double-line-to-ground faults using hybrid current profile approach},
+  author={Dubey, Anamika and Sun, Hongbo and Nikovski, Daniel and Takano, Tomihiro and Kojima, Yasuhiro and Ohno, Tetsufumi},
+  booktitle={2015 IEEE Power \& Energy Society Innovative Smart Grid Technologies Conference (ISGT)},
+  pages={1--5},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{dubey2015determining,
+  title={Determining time-of-use schedules for electric vehicle loads: A practical perspective},
+  author={Dubey, Anamika and Santoso, Surya and Cloud, Matthew P and Waclawiak, Marek},
+  journal={IEEE Power and Energy Technology Systems Journal},
+  volume={2},
+  number={1},
+  pages={12--20},
+  year={2015},
+  publisher={IEEE}
+}
+
+@misc{sun2016locating,
+  title={Locating multi-phase faults in ungrounded power distribution systems},
+  author={Sun, Hongbo and Dubey, Anamika},
+  year={2016},
+  month=oct # "~25",
+  note={US Patent 9,476,930}
+}
+
+@inproceedings{dubey2015reliability,
+  title={Reliability analysis of three-dimensional shipboard electrical power distribution systems},
+  author={Dubey, Anamika and Santoso, Surya and Arapostathis, Aristotle},
+  booktitle={2015 IEEE Electric Ship Technologies Symposium (ESTS)},
+  pages={93--98},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{santoso2015power,
+  title={Power System Harmonics},
+  author={Santoso, Surya and Dubey, Anamika},
+  journal={Electric Power Engineering Research and Education: A festschrift for Gerald T. Heydt},
+  pages={1--51},
+  year={2015},
+  publisher={Springer International Publishing}
+}
+
+@inproceedings{dubey2015understanding,
+  title={Understanding photovoltaic hosting capacity of distribution circuits},
+  author={Dubey, Anamika and Santoso, Surya and Maitra, Arindam},
+  booktitle={2015 IEEE power \& energy society general meeting},
+  pages={1--5},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{dubey2015availability,
+  title={Availability-based distribution circuit design for shipboard power system},
+  author={Dubey, Anamika and Santoso, Surya},
+  journal={IEEE Transactions on Smart Grid},
+  volume={8},
+  number={4},
+  pages={1599--1608},
+  year={2015},
+  publisher={IEEE}
+}
+
+@article{dubey2015electric,
+  title={Electric vehicle charging on residential distribution systems: Impacts and mitigations},
+  author={Dubey, Anamika and Santoso, Surya},
+  journal={IEEE Access},
+  volume={3},
+  pages={1871--1893},
+  year={2015},
+  publisher={IEEE}
+}
+
+@incollection{santoso2015power,
+  title={Power Quality},
+  author={Santoso, Surya and Dubey, Anamika},
+  booktitle={Handbook of Electric Power Calculations, 4th edition},
+  pages={659--708},
+  year={2015},
+  publisher={McGraw-Hill}
+}
+
+
 
