--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -185,5 +185,88 @@
   publisher={McGraw-Hill}
 }
 
+@article{dubey2016two,
+  title={A two-level topology design framework for reliable shipboard power systems},
+  author={Dubey, Anamika and Santoso, Surya},
+  journal={Inventions},
+  volume={1},
+  number={3},
+  pages={14},
+  year={2016},
+  publisher={MDPI}
+}
+
+@inproceedings{dubey2016designing,
+  title={Designing electric distribution circuits for improved system reliability},
+  author={Dubey, Anamika and Santoso, Surya},
+  booktitle={2016 IEEE Power and Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2016},
+  organization={IEEE}
+}
+
+@article{sharma2010pose,
+  title={Pose invariant virtual classifiers from single training image using novel hybrid-eigenfaces},
+  author={Sharma, Abhishek and Dubey, Anamika and Tripathi, Pushkar and Kumar, Vinod},
+  journal={Neurocomputing},
+  volume={73},
+  number={10-12},
+  pages={1868--1880},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{sharma2010pose,
+  title={Pose invariant face recognition based on hybrid-global linear regression},
+  author={Sharma, Abhishek and Dubey, Anamika and Jagannatha, Abhyuday N and Anand, Radhey Shyam},
+  journal={Neural Computing and Applications},
+  volume={19},
+  pages={1227--1235},
+  year={2010},
+  publisher={Springer-Verlag}
+}
+
+@inproceedings{sharma2010facial,
+  title={Facial expression recognition using virtual neutral image synthesis},
+  author={Sharma, Abhishek and Dubey, Anamika},
+  booktitle={Nat. Conf. Comp. Vi. Patt. Reco. Image Proc. and Graphics},
+  year={2010}
+}
+
+@article{dubey2010multimodal,
+  title={Multimodal Face Recognition using Hybrid Correlation Filters},
+  author={Dubey, Anamika and Sharma, Abhishek},
+  journal={NCVPRIPG, Jaipur, India},
+  year={2010}
+}
+
+@article{dubey2016estimation,
+  title={On estimation and sensitivity analysis of distribution circuit's photovoltaic hosting capacity},
+  author={Dubey, Anamika and Santoso, Surya},
+  journal={IEEE Transactions on Power Systems},
+  volume={32},
+  number={4},
+  pages={2779--2789},
+  year={2016},
+  publisher={IEEE}
+}
+
+@inproceedings{jothibasu2016determining,
+  title={Determining PV hosting capacity without incurring grid integration cost},
+  author={Jothibasu, Suma and Santoso, Surya and Dubey, Anamika},
+  booktitle={2016 North American Power Symposium (NAPS)},
+  pages={1--5},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{dubey2016analytical,
+  title={Analytical approach to estimate distribution circuit's energy storage accommodation capacity},
+  author={Dubey, Anamika and Padullaparti, Harsha V and Santoso, Surya},
+  booktitle={2016 IEEE Power \& Energy Society Innovative Smart Grid Technologies Conference (ISGT)},
+  pages={1--5},
+  year={2016},
+  organization={IEEE}
+}
 
 
