--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -269,4 +269,60 @@
   organization={IEEE}
 }
 
+@article{dubey2017framework,
+  title={A framework for stacked-benefit analysis of distribution-level energy storage deployment},
+  author={Dubey, Anamika and Chirapongsananurak, Pisitpol and Santoso, Surya},
+  journal={Inventions},
+  volume={2},
+  number={2},
+  pages={6},
+  year={2017},
+  publisher={MDPI}
+}
+
+@article{dubey2017impacts,
+  title={Impacts of voltage control methods on distribution circuit’s photovoltaic (PV) integration limits},
+  author={Dubey, Anamika},
+  journal={Inventions},
+  volume={2},
+  number={4},
+  pages={28},
+  year={2017},
+  publisher={MDPI}
+}
+
+@inproceedings{dubey2017testing,
+  title={Testing and validation of a dynamic estimator of states in OPAL-RT real time simulator},
+  author={Dubey, Anamika and Chakrabarti, Saikat and Terzija, Vladimir},
+  booktitle={2017 IEEE Power \& Energy Society General Meeting},
+  pages={1--5},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{dubey2017robust,
+  title={A robust approach to restoring critical loads in a resilient power distribution system},
+  author={Dubey, Anamika and Poudel, Shiva},
+  booktitle={2017 IEEE Power \& Energy Society General Meeting},
+  pages={1--5},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{chirapongsananurak2017stacked,
+  title={Stacked benefit applications of energy storage systems in distribution circuits},
+  author={Chirapongsananurak, Pisitpol and Dubey, Anamika and Jothibasu, Suma and Santoso, Surya and Maitra, Arindam},
+  booktitle={2017 IEEE Power \& Energy Society General Meeting},
+  pages={1--5},
+  year={2017},
+  organization={IEEE}
+}
+
+@phdthesis{dubey2015distributed,
+  title={Distributed resource integration analysis and network design of electric power distribution systems},
+  author={Dubey, Anamika},
+  year={2015}
+}
+
+
 
