--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -324,5 +324,91 @@
   year={2015}
 }
 
+@article{poudel2018critical,
+  title={Critical load restoration using distributed energy resources for resilient power distribution system},
+  author={Poudel, Shiva and Dubey, Anamika},
+  journal={IEEE Transactions on Power Systems},
+  volume={34},
+  number={1},
+  pages={52--63},
+  year={2018},
+  publisher={IEEE}
+}
+
+@article{jothibasu2018two,
+  title={Two-stage distribution circuit design framework for high levels of photovoltaic generation},
+  author={Jothibasu, Suma and Dubey, Anamika and Santoso, Surya},
+  journal={IEEE Transactions on Power Systems},
+  volume={34},
+  number={6},
+  pages={5217--5226},
+  year={2018},
+  publisher={IEEE}
+}
+
+@article{melton2018leveraging,
+  title={Leveraging standards to create an open platform for the development of advanced distribution applications},
+  author={Melton, Ronald B and Schneider, Kevin P and Lightner, Eric and Mcdermott, Thomas E and Sharma, Poorva and Zhang, Yingchen and Ding, Fei and Vadari, Subramanian and Podmore, Robin and Dubey, Anamika and others},
+  journal={IEEE Access},
+  volume={6},
+  pages={37361--37370},
+  year={2018},
+  publisher={IEEE}
+}
+
+@inproceedings{poudel2018graph,
+  title={A Graph-theoretic framework for electric power distribution system service restoration},
+  author={Poudel, Shiva and Dubey, Anamika},
+  booktitle={2018 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{krishnamoorthy2018framework,
+  title={A framework to analyze interactions between transmission and distribution systems},
+  author={Krishnamoorthy, Gayathri and Dubey, Anamika},
+  booktitle={2018 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{poudel2018optimal,
+  title={Optimal positioning of mobile emergency resources for resilient restoration},
+  author={Poudel, Shiva and Mukherjee, Monish and Dubey, Anamika},
+  booktitle={2018 North American Power Symposium (NAPS)},
+  pages={1--6},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{velaga2018transmission,
+  title={Transmission-distribution co-simulation: Model validation with standalone simulation},
+  author={Velaga, Yaswanth Nag and Chen, Aoxia and Sen, PK and Krishnamoorthy, Gayathri and Dubey, Anamika},
+  booktitle={2018 North American Power Symposium (NAPS)},
+  pages={1--6},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{bedoya2018bilateral,
+  title={A bilateral transactive energy framework for electric power distribution systems},
+  author={Bedoya, Juan Carlos and Liu, Chen-Ching and Dubey, Anamika},
+  booktitle={2018 North American Power Symposium (NAPS)},
+  pages={1--6},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{mukherjee2018distributed,
+  title={Distributed generator sizing for joint optimization of resilience and voltage regulation},
+  author={Mukherjee, Monish and Poudel, Shiva and Dubey, Anamika and Bose, Anjan},
+  booktitle={2018 North American Power Symposium (NAPS)},
+  pages={1--6},
+  year={2018},
+  organization={IEEE}
+}
+
 
 
