--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -410,5 +410,166 @@
   organization={IEEE}
 }
 
+@article{jha2019bi,
+  title={Bi-level volt-var optimization to coordinate smart inverters with voltage control devices},
+  author={Jha, Rahul Ranjan and Dubey, Anamika and Liu, Chen-Ching and Schneider, Kevin P},
+  journal={IEEE Transactions on Power Systems},
+  volume={34},
+  number={3},
+  pages={1801--1813},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{bedoya2019bilateral,
+  title={Bilateral electricity market in a distribution system environment},
+  author={Bedoya, Juan Carlos and Liu, Chen-Ching and Krishnamoorthy, Gayathri and Dubey, Anamika},
+  journal={IEEE Transactions on Smart Grid},
+  volume={10},
+  number={6},
+  pages={6701--6713},
+  year={2019},
+  publisher={IEEE}
+}
+
+@inproceedings{ostadijafari2019smart,
+  title={Smart building energy management using nonlinear economic model predictive control},
+  author={Ostadijafari, Mohammad and Dubey, Anamika and Liu, Yang and Shi, Jie and Yu, Nanpeng},
+  booktitle={2019 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{ostadijafari2019linear,
+  title={Linear model-predictive controller (LMPC) for building’s heating ventilation and air conditioning (HVAC) system},
+  author={Ostadijafari, Mohammad and Dubey, Anamika},
+  booktitle={2019 IEEE Conference on Control Technology and Applications (CCTA)},
+  pages={617--623},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{al2019small,
+  title={Small-signal stability analysis for droop-controlled inverter-based microgrids with losses and filtering},
+  author={Al Maruf, Abdullah and Ostadijafari, Mohammad and Dubey, Anamika and Roy, Sandip},
+  booktitle={Proceedings of the Tenth ACM International Conference on Future Energy Systems},
+  pages={355--366},
+  year={2019}
+}
+
+@inproceedings{velaga2019trends,
+  title={Trends in rural electric cooperatives (Co-ops) in USA: challenges and opportunities},
+  author={Velaga, Yaswanth Nag and Chen, Aoxia and Sen, PK and Dubey, Anamika},
+  booktitle={2019 IEEE rural electric power conference (REPC)},
+  pages={3--8},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{jothibasu2019optimization,
+  title={Optimization methods for evaluating PV hosting capacity of distribution circuits},
+  author={Jothibasu, Suma and Santoso, Surya and Dubey, Anamika},
+  booktitle={2019 IEEE 46th Photovoltaic Specialists Conference (PVSC)},
+  pages={0887--0891},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{krishnamoorthy2019iteratively,
+  title={Iteratively-coupled co-simulation framework for unbalanced transmission-distribution system},
+  author={Krishnamoorthy, Gayathri and Dubey, Anamika and Sen, PK},
+  booktitle={2019 IEEE Milan PowerTech},
+  pages={1--6},
+  year={2019},
+  organization={IEEE}
+}
+
+@article{velaga2019advancements,
+  title={Advancements in co-simulation techniques in combined transmission and distribution systems analysis},
+  author={Velaga, Yaswanth Nag and Krishnamoorthy, Gayathri and Dubey, Anamika and Chen, Aoxia and Sen, Pankaj K},
+  journal={The Journal of Engineering},
+  volume={2019},
+  number={12},
+  pages={8432--8438},
+  year={2019},
+  publisher={The Institution of Engineering and Technology}
+}
+
+@article{gandluru2019joint,
+  title={Joint estimation of operational topology and outages for unbalanced power distribution systems},
+  author={Gandluru, Anandini and Poudel, Shiva and Dubey, Anamika},
+  journal={IEEE Transactions on Power Systems},
+  volume={35},
+  number={1},
+  pages={605--617},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{krishnamoorthy2019transmission,
+  title={Transmission--distribution cosimulation: Analytical methods for iterative coupling},
+  author={Krishnamoorthy, Gayathri and Dubey, Anamika},
+  journal={IEEE Systems Journal},
+  volume={14},
+  number={2},
+  pages={2633--2642},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{poudel2019risk,
+  title={Risk-based probabilistic quantification of power distribution system operational resilience},
+  author={Poudel, Shiva and Dubey, Anamika and Bose, Anjan},
+  journal={IEEE Systems Journal},
+  volume={14},
+  number={3},
+  pages={3506--3517},
+  year={2019},
+  publisher={IEEE}
+}
+
+@inproceedings{ostadijafari2019conservation,
+  title={Conservation voltage reduction by coordinating legacy devices, smart inverters and battery},
+  author={Ostadijafari, Mohammad and Jha, Rahul Ranjan and Dubey, Anamika},
+  booktitle={2019 North American Power Symposium (NAPS)},
+  pages={1--6},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{jha2019local,
+  title={Local smart inverter control to mitigate the effects of photovoltaic (pv) generation variability},
+  author={Jha, Rahul Ranjan and Dubey, Anamika},
+  booktitle={2019 North American Power Symposium (NAPS)},
+  pages={1--6},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{jha2019exact,
+  title={Exact distribution optimal power flow (d-opf) model using convex iteration technique},
+  author={Jha, Rahul Ranjan and Dubey, Anamika},
+  booktitle={2019 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{krishnamoorthy2019distributed,
+  title={Distributed PV Penetration Impact Analysis on Transmission System Voltages using Co-Simulation},
+  author={Krishnamoorthy, Gayathri and Sadnan, Rabayet and Dubey, Anamika and Velaga, Yaswanth Nag and Sen, PK},
+  booktitle={2019 North American Power Symposium (NAPS)},
+  pages={1--6},
+  year={2019},
+  organization={IEEE}
+}
+
+@article{krishnamoorthy2019hybrid,
+  title={Hybrid transmission distribution co-simulation: frequency regulation using battery energy storage},
+  author={Krishnamoorthy, Gayathri and Dubey, Anamika},
+  journal={arXiv preprint arXiv:1912.07204},
+  year={2019}
+}
 
 
