--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -572,4 +572,235 @@
   year={2019}
 }
 
+@article{akrami2020best,
+  title={Best Reviewers 2019},
+  author={Akrami, Alireza and Amini, Hadi and Amini, Mahraz and Azzouz, Maher and Babaei, Sadra and Baniasadi, Ali and Bassey, Ogbonnaya and Bhattarai, Bishnu and Bose, Subhonmesh and Capuder, Tomislav and others},
+  journal={IEEE Transactions on Smart Grid},
+  volume={11},
+  number={1},
+  year={2020}
+}
+
+@article{dubey2020paving,
+  title={Paving the way for advanced distribution management systems applications: Making the most of models and data},
+  author={Dubey, Anamika and Bose, Anjan and Liu, Michael and Ochoa, Luis Nando},
+  journal={IEEE Power and Energy Magazine},
+  volume={18},
+  number={1},
+  pages={63--75},
+  year={2020},
+  publisher={IEEE}
+}
+
+@article{ranjan2019bi,
+  title={Bi-Level Volt-VAR Optimization to Coordinate Smart Inverters with Voltage Control Devices},
+  author={Ranjan Jha, Rahul and Dubey, Anamika and Liu, Chen-Ching and Schneider, Kevin P},
+  journal={arXiv e-prints},
+  pages={arXiv--1912},
+  year={2019}
+}
+
+@article{ranjan2019exact,
+  title={Exact Distribution Optimal Power Flow (D-OPF) Model using Convex Iteration Technique},
+  author={Ranjan Jha, Rahul and Dubey, Anamika},
+  journal={arXiv e-prints},
+  pages={arXiv--1912},
+  year={2019}
+}
+
+@article{ranjan2019local,
+  title={Local Smart Inverter Control to Mitigate the Effects of Photovoltaic (PV) Generation Variability},
+  author={Ranjan Jha, Rahul and Dubey, Anamika},
+  journal={arXiv e-prints},
+  pages={arXiv--1912},
+  year={2019}
+}
+
+@article{ostadijafari2020linearized,
+  title={Linearized price-responsive HVAC controller for optimal scheduling of smart building loads},
+  author={Ostadijafari, Mohammad and Dubey, Anamika and Yu, Nanpeng},
+  journal={IEEE Transactions on Smart Grid},
+  volume={11},
+  number={4},
+  pages={3131--3145},
+  year={2020},
+  publisher={IEEE}
+}
+
+@inproceedings{poudel2019probabilistic,
+  title={Probabilistic quantification of power distribution system operational resilience},
+  author={Poudel, Shiva and Dubey, Anamika and Bose, Anjan},
+  booktitle={2019 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{bedoya2019qcqp,
+  title={A qcqp and sdp formulation of the optimal power flow including renewable energy resources},
+  author={Bedoya, Juan Carlos and Abdelhadi, Ahmed and Liu, Chen-Ching and Dubey, Anamika},
+  booktitle={2019 International Symposium on Systems Engineering (ISSE)},
+  pages={1--8},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{gandluru2019non,
+  title={A non-exhaustive search algorithm to identify distribution grid operational topology},
+  author={Gandluru, Anandini and Poudel, Shiva and Dubey, Anamika},
+  booktitle={2019 North American Power Symposium (NAPS)},
+  pages={1--6},
+  year={2019},
+  organization={IEEE}
+}
+
+@techreport{yu2019economical,
+  title={Economical and Engineering Aspects of Proactive Demand Participation: Centralized versus Bilateral Control Structure},
+  author={Yu, Nanpeng and Dubey, Anamika and Liu, Chen-Ching},
+  year={2019},
+  institution={Univ. of California, Riverside, CA (United States)}
+}
+
+@inproceedings{zhang2018optimal,
+  title={Optimal strategies for scheduling the hourly demand response considering uncertainties of renewable energy in day-ahead market},
+  author={Zhang, Zijing and Wang, Qiang and Chen, Zhi and Dubey, Anamika},
+  booktitle={2018 IEEE International conference on probabilistic methods applied to power systems (PMAPS)},
+  pages={1--6},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{ostadijafari2020aggregation,
+  title={Aggregation and bidding of residential demand response into wholesale market},
+  author={Ostadijafari, Mohammad and Jha, Rahul Ranjan and Dubey, Anamika},
+  booktitle={2020 IEEE Texas Power and Energy Conference (TPEC)},
+  pages={1--6},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{mukherjee2020risk,
+  title={Risk-driven planning for system upgrades to enhance resilience of distribution systems},
+  author={Mukherjee, Monish and Poudel, Shiva and Dubey, Anamika and Bose, Anjan},
+  booktitle={2020 IEEE Texas Power and Energy Conference (TPEC)},
+  pages={1--6},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{imayakumar2020anomaly,
+  title={Anomaly detection for primary distribution system measurements using principal component analysis},
+  author={Imayakumar, Arun Abhishek and Dubey, Anamika and Bose, Anjan},
+  booktitle={2020 IEEE Texas Power and Energy Conference (TPEC)},
+  pages={1--6},
+  year={2020},
+  organization={IEEE}
+}
+
+@article{poudel2021two,
+  title={A two-stage service restoration method for electric power distribution systems},
+  author={Poudel, Shiva and Dubey, Anamika},
+  journal={IET Smart Grid},
+  volume={4},
+  number={5},
+  pages={500--521},
+  year={2021}
+}
+
+@article{jha2020conservation,
+  title={Conservation voltage reduction (CVR) via two-timescale control in unbalanced power distribution systems},
+  author={Jha, Rahul R and Dubey, Anamika and Schneider, Kevin P},
+  journal={IET Smart Grid},
+  volume={3},
+  number={6},
+  pages={801--813},
+  year={2020},
+  publisher={The Institution of Engineering and Technology}
+}
+
+@article{ranjan2020conservation,
+  title={Conservation Voltage Reduction (CVR) via Two-Timescale Control in Unbalanced Power Distribution Systems},
+  author={Ranjan Jha, Rahul and Dubey, Anamika and Schneider, Kevin P},
+  journal={arXiv e-prints},
+  pages={arXiv--2004},
+  year={2020}
+}
+
+@inproceedings{jha2020distributed,
+  title={Distributed algorithm for volt-var optimization in unbalanced distribution system},
+  author={Jha, Rahul Ranjan and Dubey, Anamika and Hong, Tianqi and Zhao, Dongbo},
+  booktitle={2020 IEEE Power \& Energy Society Innovative Smart Grid Technologies Conference (ISGT)},
+  pages={1--5},
+  year={2020},
+  organization={IEEE}
+}
+
+@article{poudel2020advanced,
+  title={Advanced FLISR with intentional islanding operations in an ADMS environment using GridAPPS-D},
+  author={Poudel, Shiva and Sharma, Poorva and Dubey, Anamika and Schneider, Kevin P},
+  journal={IEEE Access},
+  volume={8},
+  pages={113766--113778},
+  year={2020},
+  publisher={IEEE}
+}
+
+@article{sadnan2020transmission,
+  title={Transmission and distribution (T\&D) quasi-static co-simulation: Analysis and comparison of T\&D coupling strength},
+  author={Sadnan, Rabayet and Krishnamoorthy, Gayathri and Dubey, Anamika},
+  journal={IEEE Access},
+  volume={8},
+  pages={124007--124019},
+  year={2020},
+  publisher={IEEE}
+}
+
+@article{poudel2020generalized,
+  title={A generalized framework for service restoration in a resilient power distribution system},
+  author={Poudel, Shiva and Dubey, Anamika and Schneider, Kevin P},
+  journal={IEEE Systems Journal},
+  volume={16},
+  number={1},
+  pages={252--263},
+  year={2020},
+  publisher={IEEE}
+}
+
+@article{ostadijafari2020tube,
+  title={Tube-based model predictive controller for building’s heating ventilation and air conditioning (HVAC) system},
+  author={Ostadijafari, Mohammad and Dubey, Anamika},
+  journal={IEEE Systems Journal},
+  volume={15},
+  number={4},
+  pages={4735--4744},
+  year={2020},
+  publisher={IEEE}
+}
+
+@article{yu2017doe,
+  title={DOE/OE Transmission Reliability Program},
+  author={Yu, Nanpeng and Liu, Chen-Ching and Dubey, Anamika},
+  year={2017}
+}
+
+@article{bedoya2020decentralized,
+  title={Decentralized transactive energy for flexible resources in distribution systems},
+  author={Bedoya, Juan Carlos and Ostadijafari, Mohammad and Liu, Chen-Ching and Dubey, Anamika},
+  journal={IEEE Transactions on Sustainable Energy},
+  volume={12},
+  number={2},
+  pages={1009--1019},
+  year={2020},
+  publisher={IEEE}
+}
+
+@article{ostadijafari2020demand,
+  title={Demand-side participation via economic bidding of responsive loads and local energy resources},
+  author={Ostadijafari, Mohammad and Jha, Rahul Ranjan and Dubey, Anamika},
+  journal={IEEE Open Access Journal of Power and Energy},
+  volume={8},
+  pages={11--22},
+  year={2020},
+  publisher={IEEE}
+}
 
