--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -804,3 +804,174 @@
   publisher={IEEE}
 }
 
+@article{sadnan2021distributed,
+  title={Distributed optimization using reduced network equivalents for radial power distribution systems},
+  author={Sadnan, Rabayet and Dubey, Anamika},
+  journal={IEEE Transactions on Power Systems},
+  volume={36},
+  number={4},
+  pages={3645--3656},
+  year={2021},
+  publisher={IEEE}
+}
+
+@inproceedings{jha2020coordinated,
+  title={Coordinated voltage control for conservation voltage reduction in power distribution systems},
+  author={Jha, Rahul Ranjan and Dubey, Anamika},
+  booktitle={2020 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{sadnan2020real,
+  title={Real-time distributed control of smart inverters for network-level optimization},
+  author={Sadnan, Rabayet and Dubey, Anamika},
+  booktitle={2020 IEEE International Conference on Communications, Control, and Computing Technologies for Smart Grids (SmartGridComm)},
+  pages={1--6},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{mukherjee2020framework,
+  title={A framework to quantify the value of operational resilience for electric power distribution systems},
+  author={Mukherjee, Monish and Poudel, Shiva and Dubey, Anamika and Bose, Anjan},
+  booktitle={2020 IEEE/PES Transmission and Distribution Conference and Exposition (T\&D)},
+  pages={1--5},
+  year={2020},
+  organization={IEEE}
+}
+
+@article{jha2021network,
+  title={Network-level optimization for unbalanced power distribution system: Approximation and relaxation},
+  author={Jha, Rahul Ranjan and Dubey, Anamika},
+  journal={IEEE Transactions on Power Systems},
+  volume={36},
+  number={5},
+  pages={4126--4139},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{ranjan2021network,
+  title={Network-Level Optimization for Unbalanced Power Distribution System: Approximation and Relaxation},
+  author={Ranjan Jha, Rahul and Dubey, Anamika},
+  journal={arXiv e-prints},
+  pages={arXiv--2103},
+  year={2021}
+}
+
+@article{aguiar2021network,
+  title={Network-constrained Stackelberg game for pricing demand flexibility in power distribution systems},
+  author={Aguiar, Nayara and Dubey, Anamika and Gupta, Vijay},
+  journal={IEEE Transactions on Smart Grid},
+  volume={12},
+  number={5},
+  pages={4049--4058},
+  year={2021},
+  publisher={IEEE}
+}
+
+@inproceedings{sadnan2021distributed,
+  title={Distributed Voltage Control for Network-level Optimization in Radial Power Distribution Systems},
+  author={Sadnan, Rabayet and Jha, Rahul Ranjan and Dubey, Anamika},
+  booktitle={2020 52nd North American Power Symposium (NAPS)},
+  pages={1--6},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{kumar2019taxonomic,
+  title={Taxonomic and functional annotation of termite degraded (lam.) Kuntze (flame of the Forest)},
+  author={Kumar, Ashwani and Vyas, Preeti and Malla, Muneer A and Dubey, Anamika},
+  journal={The Open Microbiology Journal},
+  volume={13},
+  number={1},
+  year={2019}
+}
+
+@inproceedings{ostadijafari2021bilateral,
+  title={Bilateral market for distribution-level coordination of flexible resources using volttron},
+  author={Ostadijafari, Mohammad and Bedoya, Juan Carlos and Dubey, Anamika and Liu, Chen-Ching},
+  booktitle={2021 IEEE Madrid PowerTech},
+  pages={1--6},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{ren2021extremum,
+  title={Extremum-Seeking adaptive-droop for model-free and localized Volt-VAR optimization},
+  author={Ren, Hongda and Jha, Rahul Ranjan and Dubey, Anamika and Schulz, Noel N},
+  journal={IEEE Transactions on Power Systems},
+  volume={37},
+  number={1},
+  pages={179--190},
+  year={2021},
+  publisher={IEEE}
+}
+
+@inproceedings{cannon2021distributed,
+  title={Distributed Optimal Reactive Power Control in Islanded Microgrids with Voltage-Source Inverters},
+  author={Cannon, Andrew IH and Dubey, Anamika and Zweigle, Gregary C and Blood, Ellery A},
+  booktitle={2021 IEEE Madrid PowerTech},
+  pages={1--6},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{sadnan2021learning,
+  title={Learning optimal power flow solutions using linearized models in power distribution systems},
+  author={Sadnan, Rabayet and Dubey, Anamika},
+  booktitle={2021 IEEE 48th Photovoltaic Specialists Conference (PVSC)},
+  pages={1586--1590},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{paniyil2021batteries,
+  title={Batteries and free fuel based photovoltaics and complimentary wind energy based DC power networks as 100\% source of electric power around the globe},
+  author={Paniyil, Prahaladh and Singh, Rajendra and Powar, Vishwas and Deb, Naireeta and Zhang, Jiangfeng and Bai, Kevin and Dubey, Anamika},
+  booktitle={2021 IEEE 48th Photovoltaic Specialists Conference (PVSC)},
+  pages={1821--1828},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{sadnan2021online,
+  title={Online distributed optimization in radial power distribution systems: Closed-form expressions},
+  author={Sadnan, Rabayet and Asaki, Tom and Dubey, Anamika},
+  booktitle={2021 IEEE International Conference on Communications, Control, and Computing Technologies for Smart Grids (SmartGridComm)},
+  pages={51--56},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{krishnamoorthy2021reinforcement,
+  title={Reinforcement learning for battery energy storage dispatch augmented with model-based optimizer},
+  author={Krishnamoorthy, Gayathri and Dubey, Anamika and Gebremedhin, Assefaw H},
+  booktitle={2021 IEEE International Conference on Communications, Control, and Computing Technologies for Smart Grids (SmartGridComm)},
+  pages={289--294},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{dubey2021distribution,
+  title={Distribution System Resilience: Modeling and Optimization},
+  author={Dubey, Anamika},
+  year={2021}
+}
+
+@techreport{srivastava2020aggregate,
+  title={AGGREGATE: dAta-driven modelinG preservinG contRollable dEr for outaGe mAnagemenT and rEsiliency (Report for Task 9: Viability of Data-Driven Approach for Outage Management (Deliverable D6))},
+  author={Srivastava, Anurag K and Liu, Chen-Ching and Dubey, Anamika and Annaswamy, Anuradha M and Karthikeyan, Balasubramaniam},
+  year={2020},
+  institution={Washington State Univ., Pullman, WA (United States)}
+}
+
+@techreport{srivastava2021report,
+  title={Report for Task 15: Developed Tool Verification/Validation Report (Deliverable D11): AGGREGATE: dAta-driven modelinG preservinG contRollable dEr for outaGe mAnagemenT and rEsiliency},
+  author={Srivastava, Anurag K and Liu, Chen-Ching and Dubey, Anamika and Annaswamy, Anuradha M and Balasubramaniam, Karthikeyan},
+  year={2021},
+  institution={Washington State Univ., Pullman, WA (United States)}
+}
+
